<resources>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- String related to App and Activity Titles -->
    <string name="app_name">Gym Local</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_main">Gym Local</string>
    <string name="title_activity_find_gym">Find Gym on Map</string>

    <!-- String related Layout widgets/elements -->
    <string name="account_type">Account Type:</string>
    <string name="gym_user">Gym User</string>
    <string name="gym_owner">Gym Owner</string>
    <string name="text_tv_user_type">How will you use this app?</string>
    <string name="text_btn_log_out">Log Out</string>
    <string name="search_gyms">Search Gyms</string>
    <string name="search_events">Search Events</string>
    <string name="update_account">Update account</string>
    <string name="save_button_text">Save</string>
    <string name="change_password_text">Change Password</string>
    <string name="welcome_message">Welcome to Gym Local</string>
    <string name="app_quote">Find the best for you</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="dob">Date of birth</string>
    <string name="password">Password</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="enter_email_password_msg">Please enter your email and password</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="retype_password">Retype Password</string>
    <string name="password_error_match">Passwords do not match</string>
    <string name="text_icon">Text Icon</string>
    <string name="email_icon_text">Email Icon</string>
    <string name="password_icon">Password Icon</string>
    <string name="email_exists">Email already in use</string>
    <string name="login_failure">Incorrect username and password combination</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="welcome_user">Hello, %s</string>
    <string name="success">Success</string>
    <string name="menu_action_logout">Logout</string>
    <string name="view_account">View account</string>
    <string name="text_btn_add_gym">Add Gym</string>
    <string name="title_activity_register_gym">Register Gym</string>
    <string name="text_gym_name">Gym name</string>
    <string name="text_gym_type">Type of gym</string>
    <string name="location_icon_text">Location Icon</string>
    <string name="text_gym_address">Gym address</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="text_phonenumber">Phone number</string>
    <string name="textstreetname">Street name</string>
    <string name="text_suburb">Suburb</string>
    <string name="text_street_number">Street number</string>
    <string name="text_unit_number">Unit number</string>
    <string name="text_postcode">Post code</string>
    <string name="error_enter_gym_name">Please enter Gym Name</string>
    <string name="error_enter_gym_type">Please enter gym type</string>
    <string name="hint_gym_type">Crossfit, Strength, Ladies, Strongman, Commercial</string>
    <string name="error_enter_phone">Please enter a valid number</string>
    <string name="error_gym_address">Address is not valid</string>
    <string name="error_enter_street_number">Enter street number</string>
    <string name="error_enter_street">Enter street name</string>
    <string name="error_enter_suburb">Enter surburb</string>
    <string name="error_enter_postcode">Please enter post code</string>
    <string name="text_edit_gym_btn">Edit Gym</string>
    <string name="title_activity_edit_gym">EditGymActivity</string>
    <string name="colon_space_space">:</string>

</resources>
