<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.endevex.gymlocal.activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/welcome_user"
            android:textSize="20sp" />

        <com.endevex.gymlocal.widget.FButton
            android:id="@+id/search_gyms_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_margin="10dp"
            android:minHeight="50dp"
            android:minWidth="148dp"
            android:onClick="startMapActivity"
            android:text="@string/search_gyms"
            android:textColor="@android:color/white"
            fbutton:buttonColor="@color/fbutton_color_wet_asphalt"
            fbutton:shadowEnabled="true" />

        <com.endevex.gymlocal.widget.FButton
            android:id="@+id/search_events_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_margin="10dp"
            android:minHeight="50dp"
            android:minWidth="148dp"
            android:onClick="logout"
            android:text="@string/search_events"
            android:textColor="@android:color/white"
            fbutton:buttonColor="@color/fbutton_color_wet_asphalt"
            fbutton:shadowEnabled="true" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
